Added IOHK footer

--- a/src/footer.scss
+++ b/src/footer.scss
@@ -1,5 +1,6 @@
 @import './footers/atala.scss';
 @import './footers/cardano.scss';
+@import './footers/iohk.scss';
 
 footer#fesc-footer {
   > div#fesc-footer-relative-container {
