--- a/src/footer.scss
+++ b/src/footer.scss
@@ -3,6 +3,12 @@
 @import './footers/iohk.scss';
 
 footer#fesc-footer {
+  box-sizing: border-box;
+
+  * {
+    box-sizing: border-box;
+  }
+
   > div#fesc-footer-relative-container {
     position: relative;
   }
